--- a/.github/workflows/CustomAction.yml
+++ b/.github/workflows/CustomAction.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set the test var
-        uses: ./
+        uses: ./privateAction.yml
         with:
            repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Print the test var
