--- a/.github/workflows/CustomAction.yml
+++ b/.github/workflows/CustomAction.yml
@@ -7,6 +7,8 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Get Source
+        uses: actions/checkout@v1
       - name: Set the test var
         uses: ./
         with:
